--- a/WebContent/generic/ui/css/ui.css
+++ b/WebContent/generic/ui/css/ui.css
@@ -184,12 +184,12 @@ label.error{width:100%;}
 
 .data th {
 	margin: 0px 0px 0px 0px;
-	border-radius:0 25px 0 0;
-	border: 1px solid rgba(0,255,0,1);
+	border-radius:0 5px 0 0;
+	border: 1px solid rgba(0,0,66,0.102);
 	background-color: transparent;
-	background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(rgba(0,255,0,0.5)), to(rgba(0,255,0,0.9)));
-	background: -moz-linear-gradient(top,rgba(0,255,0,0.5),rgba(0,255,0,0.9));
-	padding: 1px 3px 1px 3px;
+	background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(rgba(40,0,158,1)), to(rgba(0,40,158,0.8)));
+	background: -moz-linear-gradient(top,rgba(40,0,158,1),rgba(0,40,158,0.8));
+	padding: 2px 3px 2px 3px;
 	color: rgba(255,255,255,1);
 	text-shadow: 0px 1px 1px rgba(0, 0, 0, 1);
 }
@@ -249,7 +249,9 @@ label.error{width:100%;}
 #subtitle{float:right;width:auto}
 
 /* Layout Style */
-#top {padding:5px;text-align:right;font:14px arial,sans-serif;*font-size:medium;*font:medium;font-weight:bold;background-color:#1D4088}
+#top {padding:5px;text-align:right;font:14px arial,sans-serif;*font-size:medium;*font:medium;font-weight:bold;background-color:#1D4088;border-radius:5px 5px 0px 0px;}
+#top div {text-decoration:none;color:#CCCCCC}
+#top a {text-decoration:none;color:#CCCCCC}
 #top a:link {text-decoration:none;color:#FFFFFF}
 #top a:visited {text-decoration:none;color:#FFFFFF}
 #top a:hover {color: #CCCCCC;text-decoration:none}
@@ -298,7 +300,7 @@ label.error{width:100%;}
 	width: 350px;	
 }
 #dataList {
-	width: 650px;
+	width: auto;
 }
 #colorSize label {display:inline-block;vertical-align:bottom;text-align:left;width:auto;padding: 0 5px 0 0;}
 
